manifests/security/vault/base/deployment.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault
  labels:
    k8s-app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: vault
  template:
    metadata:
      labels:
        k8s-app: vault
    spec:
      serviceAccount: vault
      containers:
      - name: vault
        image: vault:latest
        command: [ "vault", "server", "-log-level", "debug", "-config", "/vault/config/vault.hcl" ]
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "100m"
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        ports:
        - containerPort: 8200
          name: vault
        volumeMounts:
        - name: vault-storage
          mountPath: /vault/file/
        - name: vault-config
          mountPath: /vault/config/
        livenessProbe:
          httpGet:
            path: 'v1/sys/health?standbyok=true'
            port: 8200
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: 'v1/sys/health?standbyok=true'
            port: 8200
            scheme: HTTP
      volumes:
      - name: vault-storage
        persistentVolumeClaim:
          claimName: vault-data
      - name: vault-config
        configMap:
          name: vault
