manifests/security/vault/base/ingress.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
spec:
  backend:
    serviceName: vault
    servicePort: 80
  rules:
  - host: vault.jarvis
    http:
      paths:
      - path: /*
        backend:
          serviceName: vault
          servicePort: 80
